flow_fundamentals_unit/force-app/main/default/objects/Book_Order__c/Book_Order__c.object-meta.xml
<CustomObject>
    <label>Book Order</label>
    <nameField>
        <displayFormat>BKO-{0000000}</displayFormat>
        <label>Book Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Book Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>