flow_fundamentals_unit/force-app/main/default/objects/Book_Order__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Book Orders</relationshipLabel>
    <relationshipName>Book_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>