flow_fundamentals_unit/force-app/main/default/objects/Book_Order__c/fields/Imported__c.field-meta.xml
<CustomField>
    <fullName>Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Imported</label>
    <type>Checkbox</type>
</CustomField>