flow_fundamentals_unit/force-app/main/default/objects/Book_Order__c/fields/Number_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Number_Ordered__c</fullName>
    <label>Number Ordered</label>
    <summarizedField>Book_Line_Item__c.Quantity__c</summarizedField>
    <summaryForeignKey>Book_Line_Item__c.Book_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>