flow_fundamentals_unit/force-app/main/default/objects/Book_Order__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Order Date</label>
    <type>Date</type>
</CustomField>