flow_fundamentals_unit/force-app/main/default/objects/Book_Order__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>This pulls the last digit from the Book Order Number so that Flows can use it as a trigger condition</description>
    <formula>RIGHT(Name, 1)</formula>
    <label>Sequence</label>
    <type>Text</type>
</CustomField>